# python-project-lvl2

./: Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: lint  lint.yml
diff_generator/: functions.py  gendiff.py  generate_diff.py
diff_generator/formatters/: format_built_in_consts.py  stylish.py  stylish_plain.py
diff_generator/tests/: test_generate_diff.py
diff_generator/tests/fixtures/complicated_yml/: after.yml
formatters/: stylish.py  stylish_plain.py
gendiff/: __init__.py  constants.py  data_loader.py  functions.py  gendiff.py  generate_diff.py  stylish.py  stylish_detailed.py  stylish_json.py  stylish_plain.py
gendiff/diff_generator/: functions.py  gendiff_entry.py  generate_diff.py
gendiff/formatters/: stylish.py  stylish_plain.py
gendiff/scripts/: gendiff.py
scripts/: data_loader.py  stylish.py  stylish_detailed.py  stylish_plain.py
tests/: test_generate_diff.py
tests/fixtures/: correct_diff_for_simple_files.txt
tests/fixtures/complicated_yml/: before.yml
