[tool.poetry]
name = "hexlet_code"
version = "0.3.0"
description = ""
authors = ["Roddy <per677199@yandex.ru>"]

packages = [
{ include = 'gendiff'},
]


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"
mypy = "^0.790"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"
tests = "tests.test_generate_diff:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

